<resources>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="more">More</string>
    <string name="search">Search</string>
    <string name="licenses">Licenses</string>
    <string name="profiles">Profiles</string>
    <string name="save_log">Save log</string>
    <string name="about_message">This app allows you to launch J2ME apps and games on Android. It supports most 2D and 3D games (including Mascot Capsule 3D ones).&lt;BR></string>
    <string name="help_message">&#8226; Enabling filtering in some cases can greatly reduce performance. Disable this option if game is too slow.&lt;BR>&#8226; Image flickering issues can be fixed by enabling the "Immediate processing mode" option.</string>
    <string name="about_fork" translatable="false">&lt;BR>A fork of J2ME Loader with a built-in Memory Debugger.</string>
    <string name="about_github" translatable="false">&lt;BR>Original project: &lt;a href="https://github.com/nikita36078/J2ME-Loader">github.com/nikita36078/J2ME-Loader&lt;/a></string>
    <string name="about_copyright" translatable="false">&lt;BR>&lt;BR>Copyright 2017-2024 Nikita Shakarun&lt;BR>Fork changes: Copyright 2026 ksdevla</string>
    <string name="author">Author: </string>
    <string name="version">Version: </string>
    <string name="no_data_for_display">No data</string>
    <string name="message_delete">Do you really want to delete this app?</string>
    <string name="permission_request_failed">This app requires storage write permission</string>
    <string name="external_storage_not_mounted">This app requires external storage</string>
    <string name="create">create</string>
    <string name="alert_msg_workdir_not_exists">Working directory does not exist at path:\n\'%1$s\'.\nDo you want to create it or choose another one?</string>
    <string name="action_context_shortcut">Add shortcut</string>
    <string name="action_reinstall">Reinstall</string>
    <string name="action_settings">Settings</string>
    <string name="action_context_delete">Delete</string>
    <string name="action_context_rename">Rename</string>
    <string name="action_context_clear_data">Clear data</string>
    <string name="size_kb">%1$s KB</string>
    <string name="clear_data_message">Delete the saved data of %1$s?\n\nGame files: %2$s KB (kept)\nSaved data: %3$s KB (deleted)\n\nSaves, scores and other data the game stored will be lost. The game and its settings stay. You can make a backup first in Settings.</string>
    <string name="clear_data_none">%1$s has no saved data</string>
    <string name="clear_data_done">Cleared %1$s KB of saved data</string>
    <string name="clear_data_failed">Could not delete all saved data</string>
    <string name="clear_data_slot">Only the save slot in use is cleared: %1$s. The other slots are kept.</string>
    <string name="action_context_save_slots">Save slots</string>
    <string name="save_slots_title">Save slots – %1$s</string>
    <string name="save_slots_default">Default</string>
    <string name="save_slots_new">New slot…</string>
    <string name="save_slots_new_title">New save slot</string>
    <string name="save_slots_new_empty">Start empty</string>
    <string name="save_slots_new_copy">Copy of the saves now in use (%1$s)</string>
    <string name="save_slots_name_hint">Slot name</string>
    <string name="save_slots_use">Use this slot</string>
    <string name="save_slots_duplicate">Duplicate…</string>
    <string name="save_slots_duplicate_title">Name of the copy</string>
    <string name="save_slots_rename">Rename…</string>
    <string name="save_slots_rename_title">Rename slot</string>
    <string name="save_slots_delete">Delete</string>
    <string name="save_slots_delete_confirm">Delete the slot \"%1$s\" and the saves in it? This can not be undone.</string>
    <string name="save_slots_game_running">Close the running game first. Slots can not change while a game is open.</string>
    <string name="save_slots_now_using">The game will use \"%1$s\" the next time it starts</string>
    <string name="save_slots_failed">The slots could not be changed: %1$s</string>
    <string name="retry">retry</string>
    <string name="err_missing_app">Application not found.\nPlease check storage device %savailability or re-create shortcut.</string>
    <string name="error_disk_io">Storage error: check disk space</string>
    <string name="create_apps_dir_failed">Failed to create a folder in the path:\n\'%s\'\nselect another.</string>
    <string name="change">Change</string>
    <string name="choose">Choose</string>
    <string name="warning">Warning</string>
    <string name="scoped_storage_warning">Your user data is stored in a location which <b>will be deleted</b> when you uninstall the app:\n</string>
    <string name="error_no_picker">Please install a file picker app</string>
    <string name="midlet_name"><b>Name: </b></string>
    <string name="midlet_size"><b>Size: </b></string>
    <string name="midlet_source"><b>Source: </b></string>
    <string name="midlet_vendor"><b>Vendor: </b></string>
    <string name="midlet_version"><b>Version: </b></string>
    <string name="converting_wait">Converting JAR...</string>
    <string name="install">install</string>
    <string name="install_done">Application successfully installed!</string>
    <string name="install_jar_non_matched_jad">This app differs from that described in JAD.\nIgnore JAD and install anyway?</string>
    <string name="install_jar_needed">Select the JAR file</string>
    <string name="invalid_resolution_not_saved">Invalid resolutions: not saved!</string>
    <string name="warn_install_from_net">File will be downloaded from Internet</string>
    <string name="install_details_title">Install details</string>
    <string name="install_change_name">Change name…</string>
    <string name="install_details_name">Name</string>
    <string name="install_details_vendor">Vendor</string>
    <string name="install_details_version">Version</string>
    <string name="install_details_description">Description (optional)</string>
    <string name="install_details_show_advanced">Show advanced attributes ▾</string>
    <string name="install_details_hide_advanced">Hide advanced attributes ▴</string>
    <string name="install_details_advanced_hint">Other attributes of the game, one per line as Key: value. A wrong value can stop the game from starting.</string>
    <string name="install_details_required">This field is required</string>
    <string name="install_details_bad_line">Line %1$s is not in the form Key: value (keys are unique and have no spaces)</string>
    <string name="install_details_use_field">Use the field above to change %1$s</string>
    <string name="reinstall">App already installed.\n\nDo you want to reinstall it?\nAll data will be saved.</string>
    <string name="reinstall_newest">Update this app to version %1$s?\n\nCurrently installed: %2$s\nAll data will be saved.</string>
    <string name="reinstall_older">Replace this app with version %1$s?\n\nCurrently installed: %2$s\nOlder version may not working correctly with recorded data.</string>
    <string name="loading_info">loading info…</string>
    <string name="START_CMD">Start</string>
    <string name="CANCEL_CMD">Cancel</string>
    <string name="CLEAR_DATA_CMD">Clear data</string>
    <string name="RESET_SETTINGS_CMD">Reset settings</string>
    <string name="RESET_LAYOUT_CMD">Reset keylayout</string>
    <string name="load_profile">Load profile</string>
    <string name="save_profile">Save profile</string>
    <string name="PREF_SCREEN_OPTIONS">Screen options</string>
    <string name="PREF_SCALE_RATIO">Scale(%)</string>
    <string name="PREF_SCALE_TO_FIT">Scale to fit</string>
    <string name="PREF_KEEP_ASPECT_RATIO">Keep aspect ratio</string>
    <string name="PREF_FILTER">Filter</string>
    <string name="PREF_IMMEDIATE">Immediate processing mode</string>
    <string name="PREF_SHOW_FPS">Show FPS</string>
    <string name="PREF_FORCE_FULLSCREEN">Force fullscreen</string>
    <string name="PREF_LIMIT_FPS">Limit FPS</string>
    <string name="PREF_FONT_OPTIONS">Font options</string>
    <string name="PREF_WIDTH">Width</string>
    <string name="PREF_HEIGHT">Height</string>
    <string name="PREF_FONT_SMALL">Small</string>
    <string name="PREF_FONT_MEDIUM">Medium</string>
    <string name="PREF_FONT_LARGE">Large</string>
    <string name="PREF_FONT_SIZE_IN_SP">Values are in Scaled Pixels</string>
    <string name="PREF_BACKGROUND">Background</string>
    <string name="PREF_VIRTUAL_KEYBOARD_OPTIONS">Virtual keyboard</string>
    <string name="PREF_VK_SHOW">Show keyboard</string>
    <string name="PREF_VK_FEEDBACK">Haptic feedback</string>
    <string name="PREF_VK_FORCE_OPACITY">Force opacity for off-screen keys</string>
    <string name="PREF_TOUCH_INPUT">Touch input</string>
    <string name="PREF_HW_ACCELERATION">HW acceleration (unstable)</string>
    <string name="pref_graphics_software">Software</string>
    <string name="pref_graphics_hw_gles">HW acceleration (OpenGL ES)</string>
    <string name="pref_graphics_hw_view">HW acceleration (window)</string>
    <string name="pref_graphics_hw_surface">HW acceleration (surface)</string>
    <string name="PREF_VK_BACK">Buttons</string>
    <string name="PREF_VK_FORE">Labels</string>
    <string name="PREF_VK_OUTLINE">Outline</string>
    <string name="PREF_COLOR_HINT" translatable="false">RGB</string>
    <string name="PREF_VK_ALPHA">Opacity: </string>
    <string name="PREF_VK_HIDE_DELAY">Hide delay: </string>
    <string name="PREF_UNIT_MS">ms</string>
    <string name="PREF_VK_SEL_FORE">Labels (P)</string>
    <string name="PREF_VK_SEL_BACK">Buttons (P)</string>
    <string name="PREF_VK_KEY_SIZES">Key sizes</string>
    <string name="PREF_VK_NAV_KEYS">Joystick: </string>
    <string name="PREF_VK_SOFT_KEYS">Soft keys: </string>
    <string name="PREF_VK_NUM_KEYS">Digits: </string>
    <string name="PREF_VK_FIRE_KEY">Fire: </string>
    <string name="PREF_VK_SIZE_HINT">Size</string>
    <string name="SIZE_PRESETS">Presets</string>
    <string name="SWAP_SIZES">Swap sizes</string>
    <string name="PREF_SYS_PROPS">System properties</string>
    <string name="PREF_SYS_PROPS_HINT" translatable="false">microedition.platform: Sony Ericsson C510i\nmicroedition.profiles: MIDP2.0</string>
    <string name="PREF_ORIENTATION">Screen orientation</string>
    <string name="pref_orientation_default">Default</string>
    <string name="pref_orientation_auto">Auto</string>
    <string name="pref_orientation_port">Portrait</string>
    <string name="pref_orientation_land">Landscape</string>
    <string name="error">Error</string>
    <string name="message_clear_data">Do you really want to clear app data?</string>
    <string name="PREF_VK_TYPE">Keyboard type</string>
    <string name="pref_vk_type_arrows">Arrows</string>
    <string name="pref_vk_type_arrows_numbers">Arrows &amp; numbers</string>
    <string name="pref_vk_type_custom">Custom</string>
    <string name="pref_vk_type_numbers">Numbers</string>
    <string name="pref_vk_type_numbers_arrows">Numbers &amp; arrows</string>
    <string name="pref_vk_type_phone">Phone</string>
    <string name="pref_vk_type_phone_arrows">Phone (arrows)</string>
    <string name="PREF_LAYOUT">Layout</string>
    <string name="PREF_SHADER_FILTER">Shader:</string>
    <string name="identity_filter">Fast (no filter)</string>
    <string name="shader_tuning">Shader Tuning</string>
    <string name="shader_setting" translatable="false">%s: %s</string>
    <string name="reset">Reset</string>
    <string name="pref_input_devices_title">Input devices</string>
    <string name="pref_graphics_mode_title">Graphics mode:</string>
</resources>